C6 compiles, runs but wifi crashes

--- a/ports/espressif/Makefile
+++ b/ports/espressif/Makefile
@@ -27,6 +27,9 @@ include ../../py/circuitpy_mkenv.mk
 ifeq ($(IDF_TARGET),esp32c3)
 IDF_TARGET_ARCH = riscv
 CROSS_COMPILE = riscv32-esp-elf-
+else ifeq ($(IDF_TARGET),esp32c6)
+IDF_TARGET_ARCH = riscv
+CROSS_COMPILE = riscv32-esp-elf-
 else
 IDF_TARGET_ARCH = xtensa
 CROSS_COMPILE = xtensa-$(IDF_TARGET)-elf-
@@ -84,7 +87,8 @@ INC += \
 	-isystem esp-idf/components/efuse/include \
 	-isystem esp-idf/components/efuse/$(IDF_TARGET)/include \
 	-isystem esp-idf/components/$(IDF_TARGET)/include \
-	-isystem esp-idf/components/esp_adc/deprecated/include \
+	-isystem esp-idf/components/esp_adc/include \
+	-isystem esp-idf/components/esp_adc/$(IDF_TARGET)/include \
 	-isystem esp-idf/components/esp_app_format/include \
 	-isystem esp-idf/components/esp_common/include \
 	-isystem esp-idf/components/esp_event/include \
@@ -172,6 +176,7 @@ CFLAGS += $(INC) -Werror -Wall -std=gnu11 -Wl,--gc-sections $(BASE_CFLAGS) $(C_D
 # Most current ESPs have nano versions of newlib in ROM so we use them.
 ifneq ($(IDF_TARGET),esp32c6)
 	CFLAGS += --specs=nano.specs
+	LDFLAGS += -T$(IDF_TARGET).rom.newlib-nano.ld
 endif
 
 ifeq ($(IDF_TARGET_ARCH),xtensa)
@@ -192,7 +197,6 @@ LDFLAGS += \
 	-T$(IDF_TARGET).rom.ld \
 	-T$(IDF_TARGET).rom.api.ld \
 	-T$(IDF_TARGET).rom.libgcc.ld \
-	-T$(IDF_TARGET).rom.newlib-nano.ld \
 	-Wl,-Bstatic \
 	-Wl,--no-warn-mismatch \
 	-Wl,--build-id=none \
@@ -208,6 +212,15 @@ LDFLAGS += \
 	-Tesp32c3.rom.newlib.ld \
 	-Tesp32c3.rom.version.ld \
 	-Tesp32c3.rom.eco3.ld
+else ifeq ($(IDF_TARGET),esp32c6)
+LDFLAGS += \
+	-Tesp32c6.rom.phy.ld \
+	-Tesp32c6.rom.pp.ld \
+	-Tesp32c6.rom.net80211.ld \
+	-Tesp32c6.rom.newlib.ld \
+	-Tesp32c6.rom.coexist.ld \
+	-Tesp32c6.rom.heap.ld \
+	-Tesp32c6.rom.wdt.ld
 else ifeq ($(IDF_TARGET),esp32s2)
 LDFLAGS += \
 	-T$(IDF_TARGET).rom.newlib-data.ld \
@@ -222,7 +235,7 @@ endif
 LIBS := -lgcc -lc -lstdc++
 
 # Use toolchain libm if we're not using our own.
-ifndef INTERNAL_LIBM
+ifneq ($(INTERNAL_LIBM),1)
 LIBS += -lm
 endif
 
@@ -262,12 +275,16 @@ SRC_C += \
 
 SRC_C += $(wildcard common-hal/espidf/*.c)
 
-ifeq ($(IDF_TARGET),esp32c3)
+ifneq ($(CIRCUITPY_ESP_USB_SERIAL_JTAG),0)
 SRC_C += supervisor/usb_serial_jtag.c
-else
-SRC_C += \
-	peripherals/pcnt.c \
-	peripherals/touch.c
+endif
+
+ifneq ($(CIRCUITPY_COUNTIO),0)
+SRC_C += peripherals/pcnt.c
+endif
+
+ifneq ($(CIRCUITPY_TOUCHIO_USE_NATIVE),0)
+SRC_C += peripherals/touch.c
 endif
 
 ifneq ($(CIRCUITPY_USB),0)
@@ -435,12 +452,27 @@ endif
 
 ESP_IDF_COMPONENTS_LINK = $(IDF_TARGET_ARCH) app_update bootloader_support driver efuse esp_adc esp_app_format esp_coex esp_common esp_event esp_hw_support esp_mm esp_netif esp_partition esp_phy esp_pm esp_ringbuf esp_rom esp_system esp_timer esp-tls esp_wifi freertos hal heap log lwip mbedtls mdns newlib nvs_flash pthread soc spi_flash vfs wpa_supplicant
 ifneq ($(CIRCUITPY_BLEIO),0)
+	BLE_IMPL_esp32 := esp32
+	BLE_IMPL_esp32s3 := esp32c3
+	BLE_IMPL_esp32c2 := libble
+	BLE_IMPL_esp32c3 := esp32c3
+	BLE_IMPL_esp32c6 := libble
+	BLE_IMPL_esp32h2 := libble
+	BLE_IMPL = $(BLE_IMPL_$(IDF_TARGET))
+
 	ESP_IDF_COMPONENTS_LINK += bt
-	ifeq ($(IDF_TARGET),esp32)
-	BINARY_BLOBS += esp-idf/components/bt/controller/lib_esp32/$(IDF_TARGET)/libbtdm_app.a
-	else
+	ifeq ($(BLE_IMPL),esp32)
+		BINARY_BLOBS += esp-idf/components/bt/controller/lib_esp32/$(IDF_TARGET)/libbtdm_app.a
+	endif
+
+	ifeq ($(BLE_IMPL),esp32c3)
 	BINARY_BLOBS += esp-idf/components/esp_phy/lib/$(IDF_TARGET)/libbtbb.a \
 					esp-idf/components/bt/controller/lib_esp32c3_family/$(IDF_TARGET)/libbtdm_app.a
+	endif
+
+	ifeq ($(BLE_IMPL),libble)
+	BINARY_BLOBS += esp-idf/components/esp_phy/lib/$(IDF_TARGET)/libbtbb.a \
+					esp-idf/components/bt/controller/lib_$(IDF_TARGET)/$(IDF_TARGET)-bt-lib/libble_app.a
 	endif
 endif
 ifneq ($(CIRCUITPY_ESPULP),0)
@@ -469,10 +501,15 @@ ESP_IDF_COMPONENTS_EXPANDED += $(BUILD)/esp-idf/esp-idf/esp-camera/libesp-camera
 endif
 
 ifneq ($(VALID_BOARD),)
+# From esp-idf/components/bootloader/Kconfig.projbuild
 # BOOTLOADER_OFFSET is determined by chip type, based on the ROM bootloader, and is not changeable.
 ifeq ($(IDF_TARGET),esp32)
 BOOTLOADER_OFFSET = 0x1000
+else ifeq ($(IDF_TARGET),esp32h2)
+BOOTLOADER_OFFSET = 0x0
 else ifeq ($(IDF_TARGET),esp32c3)
+BOOTLOADER_OFFSET = 0x0
+else ifeq ($(IDF_TARGET),esp32c6)
 BOOTLOADER_OFFSET = 0x0
 else ifeq ($(IDF_TARGET),esp32s3)
 BOOTLOADER_OFFSET = 0x0
