mpy-cross needs to know it's targeting circuitpython

--- a/mpy-cross/Makefile
+++ b/mpy-cross/Makefile
@@ -21,6 +21,7 @@ CWARN = -Wall -Werror
 CWARN += -Wextra -Wno-unused-parameter -Wpointer-arith
 CFLAGS += $(INC) $(CWARN) -std=gnu99 $(COPT) $(CFLAGS_EXTRA)
 CFLAGS += -fdata-sections -ffunction-sections -fno-asynchronous-unwind-tables
+CFLAGS += -DCIRCUITPY
 
 # Debugging/Optimization
 ifdef DEBUG
