extmod/nimble: Update to NimBLE 1.6.0.
Implement a UART transport:
The way transports worked changed slightly in NimBLE 1.6.0 anyway, but
this allows us to hook the "send payload" directly, rather than having
to go byte-at-a-time via the tx callback. Also implemenets a mutex on
transmission as nothing prevents NimBLE sending both a CMD and ACL
payload at the same time.

Common implementation of mpnimbleport.c for scheduler-based ports:
Makes stm32, renesas-ra, mimxrt, rp2 use a shared implementation.

Simplify the NPL event queue:
We only need to process the single default queue, so remove the
additional logic to handle the linked list of queues. Also rename the
functions to execute the queues and run timers.

Unix:
Implement the HCI layer more like an RTOS port, where you have a task
running the host stack, and UART data is sent directly to NimBLE from
a UART IRQ. This makes it behave more like ESP32 or Zephyr, where we
only run the Python-level callbacks in a MicroPython thread.

This work was funded through GitHub Sponsors.

Signed-off-by: Jim Mussared <jim.mussared@gmail.com>

--- a/ports/mimxrt/Makefile
+++ b/ports/mimxrt/Makefile
@@ -269,7 +269,10 @@ SRC_C += mpbthciport.c
 endif # MICROPY_PY_BLUETOOTH
 
 ifeq ($(MICROPY_BLUETOOTH_NIMBLE),1)
-SRC_C += mpnimbleport.c
+# Use the common scheduler-based implementation of mpnimbleport.c.
+SRC_THIRDPARTY_C += $(addprefix $(NIMBLE_EXTMOD_DIR)/, \
+	mpnimbleport_scheduler.c \
+	)
 endif
 
 # Math library source files
