--- a/ports/stm32/Makefile
+++ b/ports/stm32/Makefile
@@ -490,7 +490,10 @@ ifeq ($(MICROPY_PY_BLUETOOTH),1)
 SRC_C += mpbthciport.c
 
 ifeq ($(MICROPY_BLUETOOTH_NIMBLE),1)
-SRC_C += mpnimbleport.c
+# Use the common scheduler-based implementation of mpnimbleport.c.
+SRC_THIRDPARTY_C += $(addprefix $(NIMBLE_EXTMOD_DIR)/, \
+	mpnimbleport_scheduler.c \
+	)
 endif
 
 ifeq ($(MICROPY_BLUETOOTH_BTSTACK),1)
