esp8266: Add OTA firmware update from file and dynamic frozen modules.
lib/littlefs/lfs2.c: installed a hook in LFS2 to dig sectors for DFU.
ports/esp8266/modesp.c: core functions for DFU and DFM.
ports/esp8266/modules/inisetup.py: user functions for DFU.
ports/esp8266/main.c: more heap memory (tested working).
ports/esp8266/esppwm.c: higher PWM frequency limit for IR control.
ports/.../esp8266_common.ld: migrated 3 functions for more IRAM space.
ports/.../mpconfigboard.h: this DFU is only for ESP8266 2MB+
py/*: string reader support read from ROM without allocation for DFM

Dynamic frozen module (DFM) can be installed on sectors immediately
after the firmware using esp.add_frozen(). You can also list and delete
modules using esp.ls_frozen() and esp.del_frozen().

Signed-off-by: Wang Xuancong <xuancong84@gmail.com>

--- a/ports/esp8266/Makefile
+++ b/ports/esp8266/Makefile
@@ -71,7 +71,7 @@ CFLAGS_XTENSA = -fsingle-precision-constant -Wdouble-promotion \
 	-Wl,-EL -mlongcalls -mtext-section-literals -mforce-l32 \
 	-DLWIP_OPEN_SRC
 
-CFLAGS += $(INC) -Wall -Wpointer-arith -Werror -std=gnu99 -nostdlib -DUART_OS=$(UART_OS) \
+CFLAGS += $(INC) -Wall -Wpointer-arith -std=gnu99 -nostdlib -DUART_OS=$(UART_OS) \
 	$(CFLAGS_XTENSA) $(COPT) $(CFLAGS_EXTRA) -I$(BOARD_DIR)
 
 LD_FILES ?= boards/esp8266_2m.ld
@@ -83,6 +83,10 @@ CFLAGS += -DMICROPY_ESPNOW=1
 LIBS += -lespnow
 endif
 
+#ifeq ($(MICROPY_DFU),1)
+#CFLAGS += -DMICROPY_DFU
+#endif
+#
 LIBGCC_FILE_NAME = $(shell $(CC) $(CFLAGS) -print-libgcc-file-name)
 LIBS += -L$(dir $(LIBGCC_FILE_NAME)) -lgcc
 
