Try and fix mpy-cross variants

--- a/.github/actions/mpy_cross/action.yml
+++ b/.github/actions/mpy_cross/action.yml
@@ -5,6 +5,9 @@ inputs:
     required: false
     default: true
     type: boolean
+  cp-version:
+    required: true
+    type: string
 
 runs:
   using: composite
@@ -27,6 +30,8 @@ runs:
       if: inputs.download == 'false' || steps.download-mpy-cross.outcome == 'failure'
       run: make -C mpy-cross -j2
       shell: bash
+      env:
+        CP_VERSION: ${{ inputs.cp-version }}
 
     - name: Upload mpy-cross
       if: inputs.download == 'false' || steps.download-mpy-cross.outcome == 'failure'
@@ -34,4 +39,4 @@ runs:
       uses: actions/upload-artifact@v3
       with:
         name: mpy-cross
-        path: mpy-cross/mpy-cross
+        path: mpy-cross/build/mpy-cross
