--- a/mpy-cross/Makefile
+++ b/mpy-cross/Makefile
@@ -1,7 +1,7 @@
 include ../py/mkenv.mk
 
 # define main target
-PROG = mpy-cross
+PROG ?= mpy-cross
 
 # qstr definitions (must come before including py.mk)
 QSTR_DEFS = qstrdefsport.h
