--- a/.github/actions/mpy_cross/action.yml
+++ b/.github/actions/mpy_cross/action.yml
@@ -19,11 +19,11 @@ runs:
       uses: actions/download-artifact@v3
       with:
         name: mpy-cross
-        path: mpy-cross
+        path: mpy-cross/build
 
     - name: Make mpy-cross executable
       if: inputs.download == 'true' && steps.download-mpy-cross.outcome == 'success'
-      run: sudo chmod +x mpy-cross/mpy-cross
+      run: sudo chmod +x mpy-cross/build/mpy-cross
       shell: bash
 
     - name: Build mpy-cross
