Hopefully fix mpy-cross-mac build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -128,15 +128,15 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: mpy-cross-macos-11-x64
-        path: mpy-cross/mpy-cross
+        path: mpy-cross/build/mpy-cross
     - name: Build mpy-cross (arm64)
       run: make -C mpy-cross -j2 -f Makefile.m1 V=2
     - uses: actions/upload-artifact@v3
       with:
         name: mpy-cross-macos-11-arm64
-        path: mpy-cross/mpy-cross-arm64
+        path: mpy-cross/build-arm64/mpy-cross-arm64
     - name: Make universal binary
-      run: lipo -create -output mpy-cross-macos-universal mpy-cross/mpy-cross mpy-cross/mpy-cross-arm64
+      run: lipo -create -output mpy-cross-macos-universal mpy-cross/build/mpy-cross mpy-cross/build-arm64/mpy-cross-arm64
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
