github/workflows: Change ruff --format to --output-format.
The --format argument has been removed in the latest version of ruff.

Signed-off-by: Damien George <damien@micropython.org>

--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -7,4 +7,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - run: pip install --user ruff
-    - run: ruff --format=github .
+    - run: ruff --output-format=github .
